Put the all the images in one folder + add assignment sheet
For having a more cleared structure.

--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
 </style>
 </head>
 
-<body style="margin-left: 20px; margin-right: 30px; margin-top: 20px; margin-bottom: 30px; background-image: url('background.jpeg');
+<body style="margin-left: 20px; margin-right: 30px; margin-top: 20px; margin-bottom: 30px; background-image: url('./img/background.jpeg');
 	background-repeat: no-repeat; 
 	background-attachment: fixed;
-	background-size: cover" onload="FP_preloadImgs(/*url*/'map_solution.jpeg')">
+	background-size: cover" onload="FP_preloadImgs(/*url*/'./img/map_solution.jpeg')">
 
 
 <h1>About</h1>
