--- a/barcelona.html
+++ b/barcelona.html
@@ -141,7 +141,7 @@ input[type=radio]:checked + span { font-weight: bold; }
 </script>
 </head>
 
-<body style="margin-left: 20px; margin-right: 30px; margin-top: 20px; margin-bottom: 30px; background-image: url('background.jpeg');
+<body style="margin-left: 20px; margin-right: 30px; margin-top: 20px; margin-bottom: 30px; background-image: url('./img/background.jpeg');
 	background-repeat: no-repeat; 
 	background-attachment: fixed;
 	background-size: cover">
@@ -165,7 +165,7 @@ Bibliography</span></a></h3>
 <p>&nbsp;</p>
 <h2><a name="1._Description">1. Description</a></h2>
 <p align="justify" class="MsoNormal">
-<img alt="Barcelona city" height="25%" src="barcelona_city.png" width="25%" class="auto-style12" style="float: right; max-height: 600px; max-width: 600px" />Barcelona is a city on the coast of northeastern Spain, 
+<img alt="Barcelona city" height="25%" src="./img/barcelona_city.png" width="25%" class="auto-style12" style="float: right; max-height: 600px; max-width: 600px" />Barcelona is a city on the coast of northeastern Spain, 
 located 150 km south of the French border. It is the capital and largest city of 
 the autonomous community of Catalonia, as well as the second most populous 
 municipality of Spain. With a population of 1.6 million within city limits, its 
@@ -188,7 +188,7 @@ the metropolitan region and to the international airport at Prat de Llobregat,
 about 13 km southwest of the city.<o:p></o:p></p>
 <p class="auto-style4">
 <o:p>
-<img alt="TMB bus" height="25%" src="bus-electrico-barcelona-tmb-1.jpeg" width="50%" /></o:p></p>
+<img alt="TMB bus" height="25%" src="./img/bus-electrico-barcelona-tmb-1.jpeg" width="50%" /></o:p></p>
 <p class="auto-style4">Bus operated by TMB (Barcelona Metropolitan Transport)</p>
 <p align="justify" class="MsoNormal">Barcelona is a transport hub, with the Port of Barcelona 
 being one of Europe's principal seaports and busiest European passenger port, an 
@@ -217,7 +217,7 @@ pictures for accessing to the official websites (if there's any).</p>
 		<td class="auto-style11" style="width: 116px">Basílica de la Sagrada Familia</td>
 		<td class="auto-style8">
 		<a href="https://sagradafamilia.org/en/home" target="_blank">
-		<img alt="" height="50%" src="sagrada_familia.jpg" width="75%" class="auto-style9" /></a></td>
+		<img alt="" height="50%" src="./img/sagrada_familia.jpg" width="75%" class="auto-style9" /></a></td>
 		<td align="justify" class="auto-style7">The Basilica of the Sagrada Familia is a monumental church devoted 
 		to the Holy Family: Jesus, Mary and Joseph. Construction began in 1882, 
 		based on plans drawn up by the architect Francisco de Paula del Villar, 
@@ -233,7 +233,7 @@ pictures for accessing to the official websites (if there's any).</p>
 	<tr>
 		<td class="auto-style11" style="width: 116px">Gothic Quarter (Barri Gotic)</td>
 		<td class="auto-style8">
-		<img alt="barri gotic" height="5%" src="barri_gotic.jpg" width="75%" /></td>
+		<img alt="barri gotic" height="5%" src="./img/barri_gotic.jpg" width="75%" /></td>
 		<td align="justify" class="auto-style7">The Central historical part of Barcelona, located between the 
 		streets of Rambla and Laetana.</td>
 		<td class="auto-style8">2-3 hours</td>
@@ -243,7 +243,7 @@ pictures for accessing to the official websites (if there's any).</p>
 		<td class="auto-style11" style="width: 116px">Casa Batllo</td>
 		<td class="auto-style8">
 		<a href="https://www.casabatllo.es/en/" target="_blank">
-		<img alt="casa batllo" height="50%" src="casa_batllo.jpg" width="75%" class="auto-style9" /></a></td>
+		<img alt="casa batllo" height="50%" src="./img/casa_batllo.jpg" width="75%" class="auto-style9" /></a></td>
 		<td align="justify" class="auto-style7">Casa Batlló is a building in the center of Barcelona. It was 
 		designed by Antoni Gaudí, and is considered one of his masterpieces.</td>
 		<td class="auto-style8">1-2 hours</td>
@@ -253,7 +253,7 @@ pictures for accessing to the official websites (if there's any).</p>
 		<td class="auto-style11" style="width: 116px">Palace of Catalan Music (Palau de la Música)</td>
 		<td class="auto-style8">
 		<a href="https://www.palaumusica.cat/en" target="_blank">
-		<img alt="palau de la musica" height="50%" src="palau_de_la_musica.jpg" width="75%" class="auto-style9" /></a></td>
+		<img alt="palau de la musica" height="50%" src="./img/palau_de_la_musica.jpg" width="75%" class="auto-style9" /></a></td>
 		<td align="justify" class="auto-style7">The Palau, an icon of modernist architecture in 
 		downtown Barcelona The Palau de la Música Catalana is one of the most 
 		representative monuments of the city and It is one of the most 
@@ -269,7 +269,7 @@ pictures for accessing to the official websites (if there's any).</p>
 		<td class="auto-style11" style="width: 116px">Mercat de la Boqueria</td>
 		<td class="auto-style8">
 		<a href="http://www.boqueria.barcelona/home" target="_blank">
-		<img alt="mercat de la boqueria" height="75%" src="mercat-de-la-boqueria.jpg" width="75%" class="auto-style9" /></a></td>
+		<img alt="mercat de la boqueria" height="75%" src="./img/mercat-de-la-boqueria.jpg" width="75%" class="auto-style9" /></a></td>
 		<td align="justify" class="auto-style7">This popular food market sells some of the 
 		freshest fruit, vegetables and seafood in Barcelona. </td>
 		<td class="auto-style8">1-2 hours</td>
@@ -287,7 +287,7 @@ seating capacity of 99,354 people,&nbsp;it is the&nbsp;largest stadium in
 Spain&nbsp;and&nbsp;Europe, and the&nbsp;fourth largest association football stadium in the 
 world. </p>
 <p class="auto-style4">
-<img alt="Camp Nou photo" height="312" src="Camp_Nou_aerial.jpg" width="449" /></p>
+<img alt="Camp Nou photo" height="312" src="./img/Camp_Nou_aerial.jpg" width="449" /></p>
 <p class="auto-style4">Camp Nou</p>
 <p>Access to the oficial website
 <a href="https://www.fcbarcelona.com/en/" target="_blank">here</a>.</p>
