--- a/quiz.html
+++ b/quiz.html
@@ -75,10 +75,10 @@ function FP_getObjectByID(id,o) {//v1.0
 </script>
 </head>
 
-<body style="margin-left: 20px; margin-right: 30px; margin-top: 20px; margin-bottom: 30px; background-image: url('background.jpeg');
+<body style="margin-left: 20px; margin-right: 30px; margin-top: 20px; margin-bottom: 30px; background-image: url('./img/background.jpeg');
 	background-repeat: no-repeat; 
 	background-attachment: fixed;
-	background-size: cover" onload="FP_preloadImgs(/*url*/'map_solution.jpeg')">
+	background-size: cover" onload="FP_preloadImgs(/*url*/'./img/map_solution.jpeg')">
 
 
 <h1 class="auto-style4">Quiz</h1>
@@ -127,7 +127,7 @@ Wikipedia</span></a></span></p>
 <map id="ImgMap0" name="ImgMap0">
 	<area class="crosshair" alt="" coords="825, 178, 804, 200, 770, 211, 725, 213, 696, 203, 677, 203, 656, 201, 650, 188, 658, 160, 658, 124, 668, 102, 682, 82, 697, 82, 704, 61, 709, 32, 721, 10, 740, 3, 755, 3, 776, 12, 785, 28, 785, 48, 786, 77, 795, 89, 814, 101, 822, 120, 829, 146, 828, 176" href="quiz_correct.html" shape="poly" />
 </map>
-<img class="auto-style6" alt="barcelona_map" height="666" src="map.jpeg" usemap="#ImgMap0" width="1000" id="img1" /><span class="auto-style7">&nbsp;</span></p>
+<img class="auto-style6" alt="barcelona_map" height="666" src="./img/map.jpeg" usemap="#ImgMap0" width="1000" id="img1" /><span class="auto-style7">&nbsp;</span></p>
 
 
 <table style="width: 100%">
@@ -135,7 +135,7 @@ Wikipedia</span></a></span></p>
 		<td class="auto-style1">&nbsp;
 
 
-<button type="button" class="auto-style8" name="display_solution" onclick="FP_swapImg(1,0,/*id*/'img1',/*url*/'map_solution.jpeg')" style="width: 225px">Displpay Solution</button>
+<button type="button" class="auto-style8" name="display_solution" onclick="FP_swapImg(1,0,/*id*/'img1',/*url*/'./img/map_solution.jpeg')" style="width: 225px">Displpay Solution</button>
 
 
 
