--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ position: absolute;
 </head>
 
 <body style="margin-left: 20px; margin-right: 30px; margin-top: 20px; margin-bottom: 30px; 
-	background-image: url('main_background.jpg');
+	background-image: url('./img/main_background.jpg');
 	background-repeat: no-repeat; 
 	background-attachment: fixed;
 	background-size: cover">
